--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,3 +17,5 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VISIONMAIN_A9804 }}
           channelId: live
           projectId: visionmain-a9804
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
