--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.0.1",
     "typescript-cookie": "^1.0.6"
   },
