--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@mui/x-data-grid": "^7.23.3",
     "axios": "^1.7.9",
     "firebase": "^10.8.0",
     "react": "^18.3.1",
