--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,3 +18,5 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VISIONMAIN_A9804 }}
           projectId: visionmain-a9804
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
