--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
-  }
+  },
+  "proxy": "http://193.203.161.90:8000"
 }
