--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.9",
-    "@mui/material": "^6.1.9",
+    "@mui/material": "^6.3.1",
+    "@mui/styles": "^6.3.1",
     "@mui/x-data-grid": "^7.23.3",
     "axios": "^1.7.9",
     "firebase": "^10.8.0",
