--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@mui/material": "^6.3.1",
     "@mui/styles": "^6.3.1",
     "@mui/x-data-grid": "^7.23.3",
+    "@mui/x-date-pickers": "^7.23.3",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "firebase": "^10.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
