--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
-   
+    "@hookform/resolvers": "^3.10.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/styles": "^6.3.1",
     "@mui/x-data-grid": "^7.23.3",
     "@mui/x-date-pickers": "^7.23.3",
@@ -24,7 +25,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.0.1",
-    "typescript-cookie": "^1.0.6"
+    "typescript-cookie": "^1.0.6",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
