--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "firebase": "^10.8.0",
+    "material-react-table": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-router": "^7.0.1",
     "typescript-cookie": "^1.0.6",
     "yup": "^1.6.1"
