--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.5.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
+    "react-to-print": "^3.0.5",
     "typescript-cookie": "^1.0.6",
     "yup": "^1.6.1"
   },
