--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "firebase": "^10.8.0",
     "framer-motion": "^12.4.4",
+    "lodash": "^4.17.21",
     "material-react-table": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,10 +33,12 @@
     "react-router": "^7.0.1",
     "react-to-print": "^3.0.5",
     "typescript-cookie": "^1.0.6",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
