--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-photo-view": "^1.2.7",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.1",
     "react-to-print": "^3.0.5",
