--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/styles": "^6.3.1",
+    "@mui/x-charts": "^8.9.0",
     "@mui/x-data-grid": "^7.23.3",
     "@mui/x-date-pickers": "^7.23.3",
     "@reduxjs/toolkit": "^2.5.1",
